# harborclerk

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.yml  pyproject.toml  spec.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
.serena/: project.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_doc_type.py  0002_user_preferences.py  0003_add_chat_model_id.py  0003_chat_tables.py  0004_add_context_pct.py  0004_nomic_embed_768.py  0005_minilm_384.py  0005_research_mode.py  0006_add_source_path.py  0006_oauth_tables.py  0007_add_summary.py  0007_research_heartbeat.py  0008_add_summarize_stage.py  0008_research_time_limit.py  0009_add_summary_model.py  0009_topic_modeling.py  0010_add_document_headings.py  0010_research_depth.py  0011_add_query_indexes.py  0012_add_entities_stage.py  0013_add_rag_context_column.py  0014_add_conversations_user_idx.py  0015_add_stats_indexes.py  0016_upload_sessions.py
art/: AppIcon.icns
docker/: app.Dockerfile  embedder.Dockerfile  entrypoint.sh
docker/postgres/: init-extensions.sql
docs/: architecture.md
docs/plans/: 2026-02-26-apple-intelligence-summarization-fallback.md  2026-02-26-mcp-enhancements-roadmap.md  2026-02-26-ui-tab-redesign-design.md  2026-02-26-ui-tab-redesign.md  2026-02-27-auto-inject-rag-design.md  2026-02-27-auto-inject-rag-plan.md  2026-02-27-processing-queue-ui-design.md  2026-02-27-processing-queue-ui.md  2026-03-05-mcp-auth-roadmap.md  2026-03-07-explore-and-filters.md  2026-03-09-research-mode-design.md  2026-03-09-research-mode-plan.md  2026-03-12-cloud-llm-integration-design.md  2026-03-12-cloud-llm-integration-plan.md  2026-03-13-apple-intelligence-summary-fallback-design.md  2026-03-19-research-engine-rework-plan.md  2026-03-19-research-engine-rework.md  2026-03-22-topic-modeling-design.md  2026-03-22-topic-modeling-plan.md  2026-03-24-smolagents-research-integration.md  2026-03-24-smolagents-research-plan.md
embedder/: pyproject.toml
embedder/src/embedder/: app.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-dist/: index.html
frontend-dist/assets/: index-C6QisSo1.css  index-CRN-PirB.js
frontend/src/: App.tsx  api.ts  auth.tsx  index.css  main.tsx
frontend/src/components/: BackButton.tsx  CitedMarkdown.tsx  InfoTip.tsx  JobToast.tsx  Layout.tsx  RagContextCard.tsx
frontend/src/contexts/: ChatContext.tsx  ResearchContext.tsx
frontend/src/hooks/: useChat.ts  useJobEvents.ts  useQueueTray.ts  useResearch.ts  useUploadSession.ts
frontend/src/pages/: ApiKeysPage.tsx  ChatPage.tsx  DocumentDetailPage.tsx  DocumentsPage.tsx  ExplorePage.tsx  HomePage.tsx  IntegrationsPage.tsx  LoginPage.tsx  ModelsPage.tsx  PreferencesPage.tsx  ResearchPage.tsx  RetrievalSettingsPage.tsx  SearchPage.tsx  ServiceLogsPage.tsx  SetupPage.tsx  StatsPage.tsx  SystemMaintenancePage.tsx  SystemPage.tsx  SystemSettingsPage.tsx  SystemStatusPage.tsx  UploadPage.tsx  UsersPage.tsx
frontend/src/types/: react.d.ts
frontend/src/utils/: dates.ts  stageLabel.ts
macos/: Makefile
macos/HarborClerk/HarborClerk/: App.swift  AuthManager.swift  BackendDetector.swift  ContentView.swift  Info.plist  KeychainManager.swift  LoginView.swift
macos/HarborClerk/HarborClerk.xcodeproj/: project.pbxproj
macos/HarborClerk/HarborClerkTests/: BackendDetectorTests.swift
macos/HarborClerkServer/HarborClerkServer/: App.swift  AppDelegate.swift  HealthChecker.swift  Info.plist  LogManager.swift  LogWindow.swift  MigrationRunner.swift  PreferencesWindow.swift  ServiceManager.swift  Settings.swift  StatusWindow.swift
macos/HarborClerkServer/HarborClerkServer.xcodeproj/: project.pbxproj
macos/HarborClerkServer/HarborClerkServerTests/: AppSettingsTests.swift  BundleResourceTests.swift  (+5 more)
macos/apple-summarize/: Package.swift
macos/scripts/: build-deps.sh  build-llama.sh  build-postgres.sh  build-redis.sh  build-tika.sh  build-venv.sh  download-model.sh  download-spacy-models.sh  notarize.sh  package.sh  release.sh
src/harbor_clerk/: __init__.py  audit.py  auth.py  config.py  db.py  db_sync.py  events.py  log_setup.py  mcp_server.py  minio_client.py  oauth.py  redis.py  search.py  storage.py  topics.py
tests/: conftest.py  test_api_auth.py  test_api_documents.py  test_api_setup.py  test_api_system.py  test_auth.py  test_chat_rag.py  test_chunking.py  test_extract_helpers.py  test_heading_parser.py  test_mcp_auth.py  test_mcp_tools.py  test_migrations.py  test_ner.py  test_oauth.py  test_password_validation.py  test_search_filtered.py  test_search_helpers.py  test_storage.py  test_summarize.py  test_upload_sessions.py
(+145 files in other folders)
