[project]
name = "harbor-clerk"
version = "0.1.0"
description = "Harbor Clerk - document dropbox with hybrid retrieval"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "pgvector>=0.3.6",
    "redis>=5.2.0",
    "rq>=2.0.0",
    "minio>=7.2.0",
    "bcrypt>=4.2.0",
    "httpx>=0.28.0",
    "PyJWT>=2.9.0",
    "python-multipart>=0.0.18",
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "langdetect>=1.0.9",
    "psycopg2-binary>=2.9.0",
    "Pillow>=10.0.0",
    "mcp>=1.9.0",
    "striprtf>=0.0.26",
    "huggingface_hub>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harbor_clerk"]

[project.scripts]
harbor-clerk-api = "harbor_clerk.api.app:main"
harbor-clerk-worker = "harbor_clerk.worker.entry:main"
harbor-clerk-seed = "harbor_clerk.seed:main"
